Revision history for Catalyst-Controller-Combine

0.11    2010-03-23
        * fixed a bug that wrongly compared paths during test
          this made one test fail under MS-Windows.
          -- Thanks, CPAN-Testers!
        
        2010-04-13
        * pulled forked changes by Phil Soehnlein
          introducing expires headers, Thanks.

0.10    2010-03-19
        * eliminated trunk/ directory
        * moved to Module::Install
        * added a note about 'namespace::autoclean' and its side effects
          with automatically determined minification
        * fixed a test that failed on Windows because path separator
          was hardcoded and wrong for this platform
        * added more tests
          
0.09    2010-03-13
        * added a replace option allowing to change files on the fly
          this can be useful eg for fixing jQuery-UI image links inside css

0.08    2009-10-24
        Tests break
        * Moose 0.85 / Class::MOP 0.88 were known to work
        * Moose 0.89 / Class::MOP 0.92 breaks tests and inhibits things from working
        * Moose 0.92 / Class::MOP 0.94 will work again. well mostly :-(
        * reason was accessing 'dir' inside BUILD()
          which required other attributes not yet present at this moment

0.07    2009-07-13
        * updated tests to match META requirements (thanks to CPAN testers)
          
0.06    2009-07-11
        * more docs added

0.05    2009-04-29
        * added a test with a TestApp
          testing uri_for() method
          testing dependency handling
          testing retrieval
          testing minification

0.04    2009-04-28
        * simplified C::Component::Combine BUILD method
        * expanded accessor definitions with default values
        * expanded C::Helper::Component::Combine
          added commented Minifier examples
          added meaningful config section

0.03    2009-04-27
        * corrected the handling for global configuration directives.
        
0.02    2009-04-26