@@ -1,5 +1,5 @@
 name    = Catalyst-Controller-Combine
-version = 0.11
+version = 0.12
 author  = Wolfgang Kinkeldei <wolfgang@kinkeldei.de>
 license = Perl_5
 copyright_holder = Wolfgang Kinkeldei
