@@ -1,5 +1,13 @@
 Revision history for Catalyst-Controller-Combine
 
+        2010-04-21
+        * fixed a security hole reported and patched by Andreas Specht (ac0v)
+          that allowed to use url-encoded path-parts to crawl along our
+          file system and read files outside the intended directory.
+          Now, trying to access files outside the wanted directories simply 
+          let the Controller die.
+        * added a test to verify this.
+          
 0.11    2010-03-23
         * fixed a bug that wrongly compared paths during test
           this made one test fail under MS-Windows.
